change some links and add text-line for fortuna

--- a/app/_locales/de/messages.json
+++ b/app/_locales/de/messages.json
@@ -584,7 +584,7 @@
     "message": "Erstellen Sie Ihre Kontaktliste."
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna ist weltweit konzipiert und aufgebaut."
+    "message": "Fortuna: Von den Göttern gesegnet, für Ihren Reichtum gebaut."
   },
   "busy": {
     "message": "Ausgelastet"
