--- a/app/_locales/el/messages.json
+++ b/app/_locales/el/messages.json
@@ -584,7 +584,7 @@
     "message": "Δημιουργήστε τη λίστα επαφών σας"
   },
   "builtAroundTheWorld": {
-    "message": "Το Fortuna έχει σχεδιαστεί και λειτουργεί σε όλο τον κόσμο."
+    "message": "Fortuna: Ευλογημένη από τους Θεούς, χτισμένη για τον πλούτο σας."
   },
   "busy": {
     "message": "Απασχολημένο"
