--- a/app/_locales/en/messages.json
+++ b/app/_locales/en/messages.json
@@ -683,7 +683,7 @@
     "message": "Build your contact list"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna is designed and built around the world."
+    "message": "Fortuna: Blessed by the Gods, Built for Your Wealth."
   },
   "busy": {
     "message": "Busy"
