--- a/app/_locales/es/messages.json
+++ b/app/_locales/es/messages.json
@@ -584,7 +584,7 @@
     "message": "Cree su lista de contactos"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna está diseñado y construido en todo el mundo."
+    "message": "Fortuna: Bendecida por los dioses, construida para tu riqueza."
   },
   "busy": {
     "message": "Ocupado"
