--- a/app/_locales/fr/messages.json
+++ b/app/_locales/fr/messages.json
@@ -584,7 +584,7 @@
     "message": "Créez votre liste de contacts"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna est conçu et établi dans le monde entier."
+    "message": "Fortuna: bénie par les dieux, construite pour votre richesse."
   },
   "busy": {
     "message": "Occupé"
