--- a/app/_locales/hi/messages.json
+++ b/app/_locales/hi/messages.json
@@ -584,7 +584,7 @@
     "message": "अपनी कॉन्टेक्ट लिस्ट बनाएं"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna दुनिया भर में डिज़ाइन किया और बनाया गया है।"
+    "message": "Fortuna देवताओं द्वारा आशीर्वादित, आपके धन के लिए निर्मित।"
   },
   "busy": {
     "message": "बिज़ी"
