--- a/app/_locales/id/messages.json
+++ b/app/_locales/id/messages.json
@@ -584,7 +584,7 @@
     "message": "Buat daftar kontak Anda"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna dirancang dan dibangun di seluruh dunia."
+    "message": "Fortuna: Diberkati oleh para Dewa, Dibangun untuk Kekayaan Anda."
   },
   "busy": {
     "message": "Sibuk"
