--- a/app/_locales/it/messages.json
+++ b/app/_locales/it/messages.json
@@ -369,7 +369,7 @@
     "message": "Costruisci la tua lista contatti"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna è progettato e costruito in tutto il mondo."
+    "message": "Fortuna: benedetta dagli dei, costruita per la tua ricchezza."
   },
   "busy": {
     "message": "Occupato"
