--- a/app/_locales/ja/messages.json
+++ b/app/_locales/ja/messages.json
@@ -584,7 +584,7 @@
     "message": "連絡先リストを作成する"
   },
   "builtAroundTheWorld": {
-    "message": "Fortunaは、世界中でデザイン・開発されています。"
+    "message": "Fortuna: 神の祝福を受け、あなたの富のために建てられました。"
   },
   "busy": {
     "message": "ビジー状態"
