--- a/app/_locales/ko/messages.json
+++ b/app/_locales/ko/messages.json
@@ -584,7 +584,7 @@
     "message": "연락처 목록 작성하기"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna는 전 세계적으로 설계 및 구축되어 있습니다."
+    "message": "Fortuna: 당신의 부를 위해 지어진 신의 축복을 받은 제품입니다."
   },
   "busy": {
     "message": "바쁨"
