--- a/app/_locales/pt/messages.json
+++ b/app/_locales/pt/messages.json
@@ -584,7 +584,7 @@
     "message": "Crie sua lista de contatos"
   },
   "builtAroundTheWorld": {
-    "message": "A Fortuna é concebida e desenvolvida em todo o mundo."
+    "message": "Fortuna: Abençoada pelos Deuses, Construída para Sua Riqueza."
   },
   "busy": {
     "message": "Ocupado"
