--- a/app/_locales/ru/messages.json
+++ b/app/_locales/ru/messages.json
@@ -584,7 +584,7 @@
     "message": "Создайте список контактов"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna разработан и создан с учетом потребностей мира."
+    "message": "Fortuna: Благословенная богами, созданная для вашего богатства."
   },
   "busy": {
     "message": "Занят"
