--- a/app/_locales/tl/messages.json
+++ b/app/_locales/tl/messages.json
@@ -584,7 +584,7 @@
     "message": "Buuin ang iyong listahan ng contact"
   },
   "builtAroundTheWorld": {
-    "message": "Ang Fortuna ay dinisenyo at itinatag sa buong mundo."
+    "message": "Fortuna: Pinagpala ng mga Diyos, Itinayo Para sa Iyong Kayamanan."
   },
   "busy": {
     "message": "Busy"
