--- a/app/_locales/tr/messages.json
+++ b/app/_locales/tr/messages.json
@@ -584,7 +584,7 @@
     "message": "Kişi listenizi oluşturun"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna dünya çapında geliştirilmiş ve yapılmıştır."
+    "message": "Fortuna: Tanrılar Tarafından Kutsanmış, Zenginliğiniz İçin İnşa Edilmiştir."
   },
   "busy": {
     "message": "Meşgul"
