--- a/app/_locales/vi/messages.json
+++ b/app/_locales/vi/messages.json
@@ -584,7 +584,7 @@
     "message": "Xây dựng danh sách liên hệ của bạn"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna được thiết kế và xây dựng trên khắp thế giới."
+    "message": "Fortuna: Được các vị thần phù hộ, được xây dựng để mang lại sự giàu có cho bạn."
   },
   "busy": {
     "message": "Đang bận"
