--- a/app/_locales/zh_CN/messages.json
+++ b/app/_locales/zh_CN/messages.json
@@ -584,7 +584,7 @@
     "message": "建立您的联系人列表"
   },
   "builtAroundTheWorld": {
-    "message": "Fortuna 是在世界各地设计和建造的。"
+    "message": "Fortuna: 受到众神的祝福，为您的财富而建。"
   },
   "busy": {
     "message": "忙碌中"
